# varistar

./: .gitignore  AKNOWLEDGMENTS.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: check.yml  lint.yml  publish-unsafe.yml  publish.yml
src/varistar/: __init__.py  groups.py  lightcurve.py  timeseries.py
src/varistar/catalog/: __init__.py  generic.py  ogle.py  tess.py
src/varistar/classify/: __init__.py  eb_detector.py  variability.py
src/varistar/ml/: data.py  features.py  pipeline.py
src/varistar/models/: __init__.py  gaussian.py  harmonic.py
src/varistar/period/: __init__.py  entropy.py  lomb_scargle.py  pdm.py  vs_period.py
src/varistar/viz/: __init__.py  interactive.py  style.py
tests/: test_placeholder.py
