[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ogle"
version = "0.1.0"
description = "ogle is a Python package helps users to manage and interact with OGLE (Optical Gravitational Lensing Experiment) data."
authors = [
    { name="Juan José Sánchez", email="pip@jjsm.science" }
]
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Astronomy",
]
dependencies = [
    "numpy",
    "astropy",
]

[project.urls]
Homepage = "https://github.com/jj-sm/ogle"
Repository = "https://github.com/jj-sm/ogle"
Issues = "https://github.com/jj-sm/ogle/issues"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.twine.repositories]
pypi = "https://upload.pypi.org/legacy/"

[dependency-groups]
dev = [
"pytest>=7.0",
"ruff>=0.3.0",
]