[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "varistar"
version = "0.1.0"
description = "varistar is a Python package helps users manage and interact with possible variable star's data."
authors = [
    { name="Juan José Sánchez", email="pip@jjsm.science" }
]
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Astronomy",
]
dependencies = [
    "numpy",
    "astropy",
    "scipy>=1.10.1",
    "scikit-learn>=1.3.2",
    "pandas>=2.0.3",
    "polars>=1.8.2",
    "seaborn>=0.13.2",
    "matplotlib>=3.7.5",
    "plotly>=6.6.0",
    "hdbscan>=0.8.40",
    "tqdm>=4.67.3",
    "chime>=0.7.0",
]

[project.urls]
Homepage = "https://docs.jjsm.science/varistar"
Repository = "https://github.com/jj-sm/varistar"
Issues = "https://github.com/jj-sm/varistar/issues"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.twine.repositories]
pypi = "https://upload.pypi.org/legacy/"

[dependency-groups]
dev = [
"pytest>=7.0",
"ruff>=0.3.0",
]
